<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp" >

        <Button
            android:id="@+id/button_paihangbang"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingLeft="10dp"
            android:text="排行榜" 
            android:drawableLeft="@drawable/paihangbang"
            android:textSize="24dp"/>

        <Button
            android:id="@+id/button_dongtai"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingLeft="20dp"
            android:drawableLeft="@drawable/dongtai"
            android:text="好友动态"
            android:textSize="24dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/paihangbang1"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/paihangbang2"
            android:textColor="@color/black"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text="@string/paihangbang3"
            android:textSize="12sp" />
            
    </LinearLayout>
        
                <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/paihangbang2"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/paihangbang4"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text="@string/paihangbang5"
            android:textSize="12sp" />

    </LinearLayout>
    
        <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/paihangbang3"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/paihangbang6"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text="@string/paihangbang7"
            android:textSize="12sp" />

    </LinearLayout>
    
        <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/paihangbang4"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/paihangbang8"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text="@string/paihangbang9"
            android:textSize="12sp" />

    </LinearLayout>
    
        <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/paihangbang5"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/paihangbang10"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text="@string/paihangbang11"
            android:textSize="12sp" />

    </LinearLayout>
    
        <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/paihangbang6"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/paihangbang12"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text="@string/paihangbang13"
            android:textSize="12sp" />

    </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_back"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/return1"
                android:paddingRight="10dp"
                android:text="@string/buttonback"
                android:textSize="16sp" />

        </LinearLayout>

</LinearLayout>